--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,6 @@ jobs:
           go-version: "1.23.0"
         
       - name: Run Go
-        run: (go test ./...)
+        run: (go test ./... -cover)
       
         
