added staticcheck in the CI process, and a broken function to main.go to see if it works

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,5 +36,17 @@ jobs:
 
       - name: Run Style Tests
         run: (test -z $(go fmt ./...))
+
+  lint:
+    name: "Run Staticcheck"
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 1
+    - uses: dominikh/staticcheck-action@v1
+      with:
+        version: "latest"
       
         
