--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
           go-version: "1.23.0"
         
       - name: Run Go
-        run: (go test ./... -cover)
+        run: go test ./... -cover
 
   style:
     name: Style
@@ -34,19 +34,13 @@ jobs:
         with:
           go-version: "1.23.0"
 
-      - name: Run Style Tests
-        run: (test -z $(go fmt ./...))
+      - name: Run Go Fmt
+        run: test -z $(go fmt ./...)
+      
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
-  lint:
-    name: Staticcheck
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 1
-    - uses: dominikh/staticcheck-action@v1
-      with:
-        version: "latest"
+      - name: Run Staticcheck
+        run: staticcheck ./...
       
         
