--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,5 +34,7 @@ jobs:
             - name: Build and push Docker image
               run: 
                 gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457718/notely-ar-repo/notely:latest .
-        
+            
+            - name: Deploy to Cloud Run
+              run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-457718/notely-ar-repo/notely:latest --region REGION --allow-unauthenticated --project notely-457718 --max-instances=4
             
