--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,6 +12,9 @@ jobs:
             - name: Check out code
               uses: actions/checkout@v4
             
+            - name: Install Goose
+              run: go install github.com/pressly/goose/v3/cmd/goose@latest
+            
             - name: Set up Go
               uses: actions/setup-go@v5
               with:
@@ -34,6 +37,11 @@ jobs:
             - name: Build and push Docker image
               run: 
                 gcloud builds submit --tag us-central1-docker.pkg.dev/notely-457718/notely-ar-repo/notely:latest .
+
+            - name: Run Database Migrations
+              env:
+                DATABASE_URL: ${{ secrets.DATABASE_URL }}
+              run: ./scripts/migrateup.sh
             
             - name: Deploy to Cloud Run
               run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-457718/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-457718 --max-instances=4
